test/cli/test-validating-policy/http-deny/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: http-deny
spec:
  evaluation:
    mode: HTTP
  validations:
  - expression: >
      http.Denied("not allowed").Response()
