test/cli/test-validating-policy/http-deny/request.json
{
    "attributes": {
      "method": "GET",
      "path": "/forbidden",
      "host": "example.com"
    }
  }
